--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -1,3 +1,5 @@
+@import "../../app.scss";
+
 .sidebar {
   display: flex;
   flex-direction: column;
@@ -7,13 +9,17 @@
   color: black;
 
    .bg{
-
+     z-index: 999;
      position: fixed;
      top: 0;
      left: 0;
      bottom:0;
      width: 400px;
-     background: white;
+     background: #9a0101;
+
+     //@include mobile {
+     //  width: 200px;
+     //}
 
      .links{
        position: absolute;
@@ -27,11 +33,17 @@
 
        a {
          font-size: 40px;
+
+         //@include mobile {
+         //  font-size: 20px;
+         //}
+
        }
      }
    }
 
   button {
+    z-index: 9999;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -41,5 +53,63 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
+
+
+
+  }
+}
+
+
+@media (width <= 768px) {
+  .sidebar {
+    .bg {
+      width: 200px;
+      .links {
+        a {
+          font-size: 20px;
+        }
+      }
+    }
+  }
+}
+
+
+
+@media (768px <= width <= 1024px) {
+  .sidebar {
+    .bg {
+      width: 300px;
+      .links {
+        a {
+          font-size: 30px;
+        }
+      }
+    }
+  }
+}
+
+@media (1024px <= width <= 1280px) {
+  .sidebar {
+    .bg {
+      width: 300px;
+      .links {
+        a {
+          font-size: 30px;
+        }
+      }
+    }
+  }
+}
+
+@media (1280px <= width <= 1366px) {
+  .sidebar {
+    .bg {
+      width: 300px;
+      .links {
+        a {
+          font-size: 30px;
+        }
+      }
+    }
   }
 }
