--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -1,24 +1,170 @@
+@import "../../app.scss";
+
 .navbar {
   height: 100px;
+
+  //@include tablet {
+  //  display: flex;
+  //  justify-content: center;
+  //}
+
+
+  .wrapper {
+    max-width: 1366px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+
+    //@include mobile{
+    //  justify-content: flex-end;
+    //  padding: 20px;
+    //}
+
+
+
+    span {
+      font-weight: bold;
+      font-size: 30px;
+
+      //@include mobile {
+      //  display: none;
+      //}
+      //
+      //@include tablet {
+      //  display: none;
+      //}
+
+
+    }
+    .social {
+      display: flex;
+      gap: 20px;
+      img {
+        width: 18px;
+
+        //@include tablet {
+        //  width: 40px;
+        //}
+
+      }
+    }
+  }
+
+
 }
 
-.wrapper {
-  max-width: 1366px;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 100%;
-}
 
-span {
-  font-weight: bold;
-}
 
-.social {
-  display: flex;
-  gap: 20px;
-  img {
-    width: 18px;
+@media (320px <= width <= 375px) {
+  .navbar {
+    .wrapper {
+      display: flex;
+      justify-content: center;
+      span {
+        display: none;
+      }
+      .social {
+        img {
+          width: 24px;
+        }
+      }
+    }
   }
 }
+
+@media (375px <= width <= 420px) {
+  .navbar {
+    .wrapper {
+      display: flex;
+      justify-content: center;
+      span {
+        display: none;
+      }
+      .social {
+        img {
+          width: 24px;
+        }
+      }
+    }
+  }
+}
+
+@media (420px <= width <= 768px) {
+  .navbar {
+    .wrapper {
+      display: flex;
+      justify-content: center;
+      span {
+        display: none;
+      }
+      .social {
+        img {
+          width: 24px;
+        }
+      }
+    }
+  }
+}
+
+
+@media (768px <= width <= 1024px) {
+  .navbar {
+    .wrapper {
+      display: flex;
+      justify-content: center;
+      span {
+        display: none;
+      }
+      .social {
+        margin-right: 40px;
+        img {
+
+          width: 24px;
+        }
+      }
+    }
+  }
+}
+
+@media (1024px <= width <= 1280px) {
+  .navbar {
+    .wrapper {
+      display: flex;
+      justify-content: space-between;
+      span {
+        margin-left: 30px;
+      }
+      .social {
+        margin-right: 70px;
+        margin-left: 420px;
+        img {
+
+          width: 24px;
+        }
+      }
+    }
+  }
+}
+
+
+@media (1280px <= width <= 1366px) {
+  .navbar {
+    .wrapper {
+      display: flex;
+      justify-content: space-between;
+      span {
+        margin-left: 30px;
+      }
+      .social {
+        margin-right: 70px;
+        img {
+
+          width: 18px;
+        }
+      }
+    }
+  }
+}
+
