--- a/src/app.scss
+++ b/src/app.scss
@@ -15,10 +15,57 @@ a {
   color: inherit;
 
 }
-
+//050202FF
 body {
-  background-color: #0c0c1d;
+  //background-color: #0c0c1d;
+  background: linear-gradient(180deg, #050202, #111010);
   color: lightgray;
+}
+
+@mixin exsmall {
+  @media (max-width: 375px) {
+    @content;
+  }
+}
+
+
+@mixin small {
+  @media (max-width: 420px) {
+    @content;
+  }
+}
+
+
+@mixin mobile {
+  @media (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin mobilelg {
+  @media (max-width: 480px) {
+    @content;
+  }
+}
+
+
+@mixin tablet {
+  @media (max-width: 1024px) {
+    @content;
+  }
+}
+
+
+@mixin desktophd {
+  @media (max-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media (max-width: 1366px) {
+    @content;
+  }
 }
 
 
